--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <h1>Reona Choudhury</h1>
-    <p> Hi mom</p>
+  <div class="page-wrapper">
+    <div class="side1">
+      <div class="wrapper">
+        <h1>Computer Science</h1>
+        <img class="profile-pic" src="profile-pic.jpg">
+        <h2>Reona Choudhury</h2>
+        <p> See my Experience:
+          <a href="https://github.com/rpxchoudhury">Github</a>
+          <a href="https://www.linkedin.com/in/reona-choudhury-838ab62ab/">LinkedIn</a>
+          <a href="file:///Users/reona/Downloads/Resume%20(4)%20(1)%20(2).pdf">Resume</a>
+        </p>
+      </div>
+      <div class="wrapper">
+          <h1>Work History</h1>
+          <ul class="skills-container">
+            <li>
+              <p>C++</p>
+            </li>
+            <li>
+              <p>C</p>
+            </li>
+            <li>
+              <p>Java</p>
+            </li>
+            <li>
+              <p>HTML</p>
+            </li>
+            <li>
+              <p>CSS</p>
+            </li>
+          </ul>
+      </div>
+    </div>
+    <div class="side2">
+
+    </div>
+  </div>
 </body>
+
 </html>
