--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  
+
 </head>
 
 <body>
@@ -46,7 +46,15 @@
       </div>
     </div>
     <div class="side2">
-
+        <div class="wrapper">
+            <h1>About Me</h1>
+            <p>
+              talk about me
+            </p>
+            <h2>Resume</h2>
+            <iframe src="/Users/reona/Downloads/Resume (1).pdf"width="100%" height="500px" style="border:none;">
+            </iframe>
+        </div>
     </div>
   </div>
 </body>
