--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <p>
               talk about me
             </p>
+            <h2>Resume</h2>
+            <iframe src="/Users/reona/Downloads/Resume (1).pdf"width="100%" height="500px" style="border:none;">
+            </iframe>
         </div>
     </div>
   </div>
