--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
             <p>
               talk about me
             </p>
+          </div>
+          <div class="wrapper">
             <h2>Resume</h2>
+            </div>
         </div>
     </div>
   </div>
