--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </p>
       </div>
       <div class="wrapper">
-          <h1>Work History</h1>
+          <h1>Skills</h1>
           <ul class="skills-container">
             <li>
               <p>C++</p>
