--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         <div class="wrapper">
             <h1>About Me</h1>
             <p>
-              Hello! I am currently a junior at University of Michigan -Ann Arbor.
-              I am seeking a bachelors in computer science engineering and expecting to graduate by winter 2026. I am born and raised in Michigan but I am happy to explore other states when new opportunities arise.
+              Hello! I am currently a junior at University of Michigan -Ann Arbor.I am seeking a bachelors in computer science engineering and expecting to graduate by winter 2026. I am born and raised in Michigan but I am happy to explore other states when new opportunities arise.
             </p>
           </div>
           <div class="wrapper">
