--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <p> See my Experience:
           <a href="https://github.com/rpxchoudhury">Github</a>
           <a href="https://www.linkedin.com/in/reona-choudhury-838ab62ab/">LinkedIn</a>
-          <a href="file:///Users/reona/Downloads/Resume%20(4)%20(1)%20(2).pdf">Resume</a>
         </p>
       </div>
       <div class="wrapper">
@@ -57,6 +56,10 @@
           </div>
           <div class="wrapper">
             <h2>Resume</h2>
+            <p>
+              <a href="Resume.pdf" download="Resume_Reona_Choudhury.pdf">Download My Resume</a>
+            </p>
+            <embed src="Resume.pdf" type="application/pdf" width="100%" height="600px">
             </div>
         </div>
     </div>
