--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
           </div>
           <div class="wrapper">
             <h2>Resume</h2>
-
-            <embed src="Resume.pdf" type="application/pdf" width="50%" height="200px">
+            <p>
+              <a href="Resume.pdf" download="Resume_Reona_Choudhury.pdf">Download My Resume</a>
+            </p>
+            <embed src="Resume.pdf" type="application/pdf" width="75%" height="400px">
             </div>
         </div>
     </div>
