--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li>
               <p>CSS</p>
             </li>
+            <li>
+              <p>Github</p>
+            </li>
           </ul>
       </div>
     </div>
@@ -56,7 +59,7 @@
               <a href="Resume.pdf" download="Resume_Reona_Choudhury.pdf">Download My Resume</a>
             </p>
 
-            <embed src="Resume.pdf" type="application/pdf" width="100%" height="450px">
+            <embed src="Resume.pdf" type="application/pdf" width="80%" height="450px">
             </div>
         </div>
     </div>
