--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="wrapper">
             <h1>About Me</h1>
             <p>
-              Hello! I am currently a junior at University of Michigan-Ann Arbor. I am seeking a bachelors in computer science engineering and expecting to graduate by winter 2026. I am born and raised in Michigan but I am happy to explore other states when new opportunities arise.
+              Hello! I'm a junior pursuing a Bachelor's degree in Computer Science Engineering at the University of Michigan-Ann Arbor, with an expected graduation date in winter 2026. I am born and raised in Michigan but I am happy to explore other states when new opportunities arise.
             </p>
           </div>
           <div class="wrapper">
